# pkg/routes/main.go
@@ -5,20 +5,22 @@ import (
 	"github.com/rs/zerolog"
 	echoSwagger "github.com/swaggo/echo-swagger"
 	"github.com/tetrex/wecredit-assignment/pkg/services"
+	"github.com/tetrex/wecredit-assignment/utils/jwt"
 )
 
 func InitRoutes(router *echo.Echo, services *services.Services, l *zerolog.Logger) {
 	// Public routes (No JWT required)
 	router.GET("/", services.Health.HealthCheck)
-	// router.POST("/login", services.Auth.Login)
-	router.POST("/signup", services.Auth.SignUp)
-
-	// Protected routes (JWT required)
-	// protected := router.Group("/v1", jwt.JWTMiddleware)
 
 	// auth
-	// protected.POST("/auth/login", services.Auth.Login)
-	// protected.POST("/auth/signup", services.Auth.SignUp)
+	router.POST("/v1/login", services.Auth.Login)
+	router.POST("/v1/signup", services.Auth.SignUp)
+
+	// Protected routes (JWT required)
+	protected := router.Group("/v1", jwt.JWTMiddleware)
+
+	// auth
+	protected.GET("/user", services.User.GetUserById)
 
 	// Swagger documentation route (no authentication)
 	router.GET("docs/*", echoSwagger.WrapHandler)
